2.1.1 (XXX XX, 2022)
  - Updated SDK version to v10.22.0 which is the latest to the date.
  - Added cors
  - Added Multi environment support
  - Added new env variables:
    - SPLIT_EVALUATOR_ENVIRONMENTS

2.1.0 (Jul 15, 2022)
 - Added support for attribute values to be sent as JSON in a POST version of the get treatment endpoints, to avoid query param limitations.
 - Updated the SDK version to 10.20.0 which is the latest to the date.
 - Updated npm dependencies for vulnerability fixes.
 - Updated base image to node:16.16.0-alpine3.16

2.0.7 (Mar 28, 2022)
 - Updated alpine image for vulnerabilities.

2.0.6 (Feb 24, 2022)
- Updated SDK version to v10.17.2 which is the latest stable to the date and includes vulnerability fixes and improvements. See more here https://github.com/splitio/javascript-client/blob/development/CHANGES.txt
- Updated many dependencies and fixing vulnerabilities.
- Updated base image to node:16-alpine3.14 as well as some NPM dependencies for vulnerability fixes.
- Updated engine settings on package json to match Node 16 version validated.

2.0.5 (Mar 18, 2021)
- Updated SDK version to v10.15.4 which is the latest stable to the date and includes a fix for streaming when detecting a segment for the first time amongst other updates. See more here https://github.com/splitio/javascript-client/blob/development/CHANGES.txt

2.0.4 (Feb 24, 2021)
- Updated SDK version to v10.15.3 which is the latest stable to the date and includes impressions deduplication as well as other benefitial fixes. In this release you might notice a memory consumption increase due to a new LRU cache but don't be alarmed unless it doesn't stabilize around 256mb increase when reaching peak allocation.
- Updated many dependencies and fixing vulnerabilities.

2.0.3 (July 31, 2020)
- Updated SDK version to v10.14.0 which is the latest stable to the date and uses the new Streaming architecture.
- Updated many dependencies and fixing vulnerabilities.

2.0.2 (October 31, 2019)